--- a/MaquetteSite/index.html
+++ b/MaquetteSite/index.html
@@ -28,17 +28,20 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="#">SPI</a>
+          <a class="navbar-brand" href="#"><img src="res/logoNav.jpg" alt="Logo" id="logoNav"/></a>
         </div>
         <div id="navbar" class="navbar-collapse collapse">
             <form class="navbar-form navbar-right">
-                <div class="input-group">
-                    <input type="text" class="form-control" placeholder="Ex: Moteur porte AX320" name="recherche">
-                    <span class="input-group-btn">
-                        <button class="btn btn-default btn-primary" type="button">Rechercher</button>
-                    </span>
+                <div>
+                    <a href="" onclick="afficheConnection()" id="btnConnection">Se connecter</a>
                 </div>
                 <section id="categorieNav" >
+                    <div class="input-group">
+                        <input type="text" class="form-control" placeholder="Ex: Moteur porte AX320" name="recherche">
+                        <span class="input-group-btn">
+                            <button class="btn btn-default btn-primary" type="button">Rechercher</button>
+                        </span>
+                    </div>
                       <h2 >Catégories  </h2>
                       <ul class="nav nav-pills nav-stacked">
 
@@ -47,24 +50,25 @@
                           <li role="presentation"><a href="#">Messages</a></li>
                       </ul>
                 </section>
-            <!--<div class="form-group">
-              <input type="text" placeholder="Recherche" class="form-control">
-            </div>
-            
-            <button type="submit" class="btn btn-success">Rechercher</button>-->
           </form>
         </div><!--/.navbar-collapse -->
       </div>
     </nav>
     <div id="page" class="row" style="margin-top:100px;">
         <section class="col-md-2 " id="categorie" >
-              <h2 >Catégories  </h2>
-              <ul class="nav nav-pills nav-stacked">
-
-                  <li role="presentation" class="active"><a href="#">Home</a></li>
-                  <li role="presentation"><a href="#">Profile</a></li>
-                  <li role="presentation"><a href="#">Messages</a></li>
-              </ul>
+            <h2>Recherche</h2>
+            <div class="input-group">
+                <input type="text" class="form-control" placeholder="Ex: Moteur porte AX320" name="recherche">
+                <span class="input-group-btn">
+                    <button class="btn btn-default btn-primary" type="button">Rechercher</button>
+                </span>
+            </div>
+            <h2 >Catégories  </h2>
+            <ul class="nav nav-pills nav-stacked">
+              <li role="presentation" class="active"><a href="#">Home</a></li>
+              <li role="presentation"><a href="#">Profile</a></li>
+              <li role="presentation"><a href="#">Messages</a></li>
+            </ul>
         </section>
         <section class="col-md-9" id="contenu" >
             <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
