--- a/MaquetteSite/index.html
+++ b/MaquetteSite/index.html
@@ -33,15 +33,17 @@
         <div id="navbar" class="navbar-collapse collapse">
             <form class="navbar-form navbar-right">
                 <div>
-                    <a href="" onclick="afficheConnection()" id="btnConnection">Se connecter</a>
+                    <a href="login.html" id="btnConnection">Se connecter</a>
                 </div>
                 <section id="categorieNav" >
+                    <hr>
                     <div class="input-group">
                         <input type="text" class="form-control" placeholder="Ex: Moteur porte AX320" name="recherche">
                         <span class="input-group-btn">
                             <button class="btn btn-default btn-primary" type="button">Rechercher</button>
                         </span>
                     </div>
+                    <hr>
                       <h2 >Catégories  </h2>
                       <ul class="nav nav-pills nav-stacked">
 
