--- a/MaquetteSite/login.html
+++ b/MaquetteSite/login.html
@@ -23,7 +23,7 @@
     <nav class="navbar navbar-inverse navbar-fixed-top">
       <div class="container">
         <div class="navbar-header">
-          <a class="navbar-brand" href="#"><img src="res/logoNav.jpg" alt="Logo" id="logoNav"/></a>
+          <a class="navbar-brand" href="index.html"><img src="res/logoNav.jpg" alt="Logo" id="logoNav"/></a>
         </div>
         
       </div>
