--- a/MaquetteSite/index.html
+++ b/MaquetteSite/index.html
@@ -67,9 +67,9 @@
             </div>
             <h2 >Catégories  </h2>
             <ul class="nav nav-pills nav-stacked">
-              <li role="presentation" class="active"><a href="#">Home</a></li>
-              <li role="presentation"><a href="#">Profile</a></li>
-              <li role="presentation"><a href="#">Messages</a></li>
+              <li role="presentation" class="active"><a href="#">Porte</a></li>
+              <li role="presentation"><a href="#">Moteur</a></li>
+              <li role="presentation"><a href="#">Ressort</a></li>
             </ul>
         </section>
         <section class="col-md-9" id="contenu" >
@@ -171,7 +171,7 @@
       
       </div>
       <footer>
-        <p>&copy; SPI 2017, mention legal etc..</p>
+        <p>&copy; SPI 2017, mention legal etc..<a href="contact.html">Nous contacter</a></p>
       </footer>
     <!-- Bootstrap core JavaScript
     ================================================== -->
