--- a/MaquetteSite/login.html
+++ b/MaquetteSite/login.html
@@ -52,7 +52,7 @@
       
       </div>
       <footer>
-        <p>&copy; 2016 Company, Inc.</p>
+        <p>&copy; 2016 Company, Inc. <a href="contact.html">Nous contacter</a></p>
       </footer>
     <!-- Bootstrap core JavaScript
     ================================================== -->
