debut ajax categorie

--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -49,9 +49,10 @@
                     <hr>
                       <h2 >Catégories  </h2>
                       <ul class="nav nav-pills nav-stacked">
-                          <li role="presentation" class="active" ><a href="#" class="categorie1">Porte</a></li>
-                          <li role="presentation"><a href="#" id="categorie2">Moteur</a></li>
-                          <li role="presentation"><a href="#" id="categorie3">Ressort</a></li>
+                          <li  class="active" role="presentation"><a   class="" href="index.html" id="tout">Tout</a></li>
+                          <li role="presentation"  ><a href="#" class="categorie" id="porte">Porte</a></li>
+                          <li role="presentation"><a   class="categorie" href="#" id="moteur">Moteur</a></li>
+                          <li role="presentation"><a  class="categorie" href="#" id="ressort">Ressort</a></li>
                       </ul>
                 </section>
           </form>
@@ -59,7 +60,7 @@
       </div>
     </nav>
     <div id="page" class="row" style="margin-top:100px;">
-        <section class="col-md-2 " id="categorie" >
+        <section  class="col-md-2 nav" id="categorie" >
             <h2>Recherche</h2>
             <div class="input-group">
                 <input type="text" class="form-control" placeholder="Ex: Moteur porte AX320" name="recherche">
@@ -69,9 +70,10 @@
             </div>
             <h2 >Catégories  </h2>
             <ul class="nav nav-pills nav-stacked">
-              <li role="presentation" class="active" ><a href="#" class="categorie1">Porte</a></li>
-              <li role="presentation"><a href="#" id="categorie2">Moteur</a></li>
-              <li role="presentation"><a href="#" id="categorie3">Ressort</a></li>
+              <li  class="active" role="presentation"><a   class="" href="index.html" id="tout">Tout</a></li>
+              <li role="presentation"  ><a href="#" class="categorie" id="porte">Porte</a></li>
+              <li role="presentation"><a   class="categorie" href="#" id="moteur">Moteur</a></li>
+              <li role="presentation"><a  class="categorie" href="#" id="ressort">Ressort</a></li>
             </ul>
         </section>
         <section class="col-md-9" id="contenu" >
