--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -79,44 +79,44 @@
         <section class="col-md-9" id="contenu" >
             <div id="carousel-example-generic" class="carousel slide" data-ride="carousel">
       <!-- Indicators -->
-            <ol class="carousel-indicators">
-                <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="1"></li>
-                <li data-target="#carousel-example-generic" data-slide-to="2"></li>
-            </ol>
+                <ol class="carousel-indicators">
+                    <li data-target="#carousel-example-generic" data-slide-to="0" class="active"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="1"></li>
+                    <li data-target="#carousel-example-generic" data-slide-to="2"></li>
+                </ol>
 
-            <!-- Wrapper for slides -->
-            <div class="carousel-inner" role="listbox">
-                <div class="item active">
-                  <img src="res/carousel3.jpg" alt="Désolé">
-                  <div class="carousel-caption">
+                <!-- Wrapper for slides -->
+                <div class="carousel-inner" role="listbox">
+                    <div class="item active">
+                      <img src="res/carousel3.jpg" alt="Désolé">
+                      <div class="carousel-caption">
 
-                  </div>
+                      </div>
+                    </div>
+                    <div class="item">
+                      <img src="res/carousel1.jpg" alt="Désolé">
+                      <div class="carousel-caption">
+
+                      </div>
+                    </div>
+
+                    <div class="item">
+                      <img src="res/carousel2.jpg" alt="Désolé">
+                      <div class="carousel-caption">
+
+                      </div>
+                    </div>
                 </div>
-                <div class="item">
-                  <img src="res/carousel1.jpg" alt="Désolé">
-                  <div class="carousel-caption">
 
-                  </div>
-                </div>
-
-                <div class="item">
-                  <img src="res/carousel2.jpg" alt="Désolé">
-                  <div class="carousel-caption">
-
-                  </div>
-                </div>
-            </div>
-
-            <!-- Controls -->
-              <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
-                <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-              </a>
-              <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
-                <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-              </a>
+                <!-- Controls -->
+                  <a class="left carousel-control" href="#carousel-example-generic" role="button" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                    <span class="sr-only">Previous</span>
+                  </a>
+                  <a class="right carousel-control" href="#carousel-example-generic" role="button" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                    <span class="sr-only">Next</span>
+                  </a>
             </div>
             <div id="catalogue" >
                 <h1>Les Indispensables</h1>
@@ -164,7 +164,8 @@
                     </article>
                 </div>
             </div>
-            <div id="ContenuLogin">
+        </section>
+        <section class="col-md-9" id="ContenuLogin">
                 <h1>Connexion</h1>
                 <form action="" method="GET" class="input-group" > 
                     <label for="login" >Adresse E-mail</label><br>
@@ -173,14 +174,9 @@
                     <input type="password" class="form-control" placeholder="******" aria-describedby="basic-addon3" name="login">
                     <input class=" btn btn-primary btn-lg" type="submit" value="Se connecter" id="validation">
                 </form>
-            </div>
-            <div id="contenuContact">
-                <section class="col-md-2">
-                    <p>Numero phone</p>
-                    <p>Nom</p>
-                    <p>Mail</p>
-              </section>
-              <section class="col-md-9" id="login">
+        </section>
+        <section class="col-md-9" id="contenuContact">
+              <div  id="login">
                     <h1>Contact</h1>
                     <form class="input-group" action="" method="post">
                         <label for="nom">Nom</label>
@@ -195,8 +191,7 @@
                         </textarea><br>
                         <input type="submit" class="btn btn-primary btn-lg" value="Envoyer">
                     </form>
-              </section>
-            </div>
+              </div>
          </section> 
       
       </div>
