Warning si erreur de connexion

--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -122,16 +122,18 @@
         </section>
         <section class="col-md-9" id="ContenuLogin">
                 <h1>Connexion</h1>
-                <div class="error">
+                <div class="panel panel-warning ">
+                    <div class="panel-heading error">
                     
+                    </div>
                 </div>
-                <div class="input-group" > 
+                <form class="input-group" > 
                     <label for="login" >Login</label><br>
                     <input id="login" type="text" class="form-control"  placeholder="exemple@votresociete.com" aria-describedby="basic-addon3" name="login"><br>
                     <label for="password" >Mots de passe</label><br>
                     <input id="password" type="password" class="form-control" placeholder="******" aria-describedby="basic-addon3" name="password">
-                    <input class=" btn btn-primary btn-lg" type="submit" value="Se connecter" id="validation">
-                </div>
+                    <input class=" btn btn-primary btn-lg" type="button" value="Se connecter" id="validation">
+                </form>
         </section>
         <section class="col-md-9" id="contenuContact">
               <div  id="login">
