--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -53,6 +53,7 @@
                           <li  class="active" role="presentation"><a   class="" href="index.html" id="tout">Tout</a></li>
                       </ul>
                     <a class="btn btn-info ajouterArticle" >Ajouter un article</a>
+                    <a class="btn btn-info creerCompte" >Créer un Compte</a>
                 </section>
           </form>
         </div><!--/.navbar-collapse -->
@@ -186,7 +187,7 @@
         </section>
          <section class="col-md-9 animated" id="creerCompte" >
             <div>
-                <h1>Paramètre du compte</h1>
+                <h1>Créer un compte</h1>
                 <div>
                     <label for="email">Adresse e-mail :</label> <input class="input-group" type="text" name="email" ><br>
                     <label for="nom">Nom :</label> <input class="input-group" type="text" name="nom" ><br>
