--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -15,6 +15,7 @@
     
     <script src="js/jquery-3.2.0.min.js"></script>
     <script src="js/script.js"></script>
+    <script src="js/scriptBis.js"></script>
    
 
     <title>Declic Fermeture</title>
