--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -177,7 +177,8 @@
                 <h1>Paramètre du compte</h1>
                 <div>
                     <label for="email">Adresse e-mail :</label> <input class="input-group" type="text" name="email" ><br>
-                    <label for="password">Mots de passe :</label> <input class="input-group" type="password" name="password" ><br>
+                    <label for="oldPassword">Mots de passe actuel :</label> <input class="input-group" type="password" name="oldPassword" ><br>
+                    <label for="password">Nouveau mots de passe :</label> <input class="input-group" type="password" name="password" ><br>
                     <label for="confirmation">Confirmation :</label> <input class="input-group" type="password" name="confirmation" ><br>
                      <input type="submit"  value="Modifier" class="btn btn-primary" id="modifCompte">
                    
