gestion des portes

--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -184,11 +184,16 @@
                 </div>
             </div>
              <div>
-                <h1>Nouvelle porte</h1>
+                <h1>Vos porte</h1>
                  <div>
-                    <label for="email">Numero porte: </label> <input class="input-group" type="text" name="numPorte" ><br>
-                    <label for="oldPassword">Nom: </label> <input class="input-group" type="text" name="oldPassword" ><br>
-                    <label for="password">Réference: </label> <input class="input-group" type="text" name="password" ><br>
+                     <table id="sesPortes" class="table">
+                        <tr>
+                            <th>Numero porte</th> 
+                            <th>Description porte</th> 
+                            <th>Date derniere maintenance</th> 
+                            <th>Description derniere maintenance</th> 
+                        </tr>
+                     </table>
                      <input type="submit"  value="Ajouter" class="btn btn-primary" id="ajoutPorte">
                  </div>
              </div>
