prenddre une maintenance

--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -15,7 +15,6 @@
     
     <script src="js/jquery-3.2.0.min.js"></script>
     <script src="js/script.js"></script>
-    <script src="js/scriptBis.js"></script>
    
 
     <title>Declic Fermeture</title>
@@ -192,6 +191,7 @@
                             <th>Description porte</th> 
                             <th>Date derniere maintenance</th> 
                             <th>Description derniere maintenance</th> 
+                            <th>Maintenance</th> 
                         </tr>
                      </table>
                      <input type="submit"  value="Ajouter" class="btn btn-primary" id="ajoutPorte">
