--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -198,6 +198,14 @@
                     <input type="submit" value="Ajouter" class="btn btn-primary" id="ajoutPorte">
                 </div>
             </div>
+            <div id="descritpion">
+                <h1>Ajout maintenance</h1>
+                <div>
+                    <label for="email">Porte</label> <input class="input-group" type="text" name="" id="porteMaintenance" disabled><br>
+                    <label for="desciptionMaintenance">Raison de la maintenance :</label><br><textarea id="desciptionMaintenance" cols="35" rows="15" name="desciptionMaintenance"></textarea><br>
+                    <input type="submit" value="Envoyer" class="btn btn-primary" id="faireMaintenance">
+                </div>
+            </div>
         </section>
         <section class="col-md-9 animated" id="creerCompte">
             <div>
