--- a/server/src/main/webapp/index.html
+++ b/server/src/main/webapp/index.html
@@ -216,7 +216,7 @@
                     <label for="siret">Numero de Siret :</label> <input class="input-group" type="text" name="siret"><br>
                     <label for="telephone">Telephone :</label> <input class="input-group" type="text" name="telephone"><br>
                     <label for="password">Mots de passe :</label> <input class="input-group" type="password" name="password"><br>
-                    <label for="confirmation">Confirmation :</label> <input class="input-group" type="confirmation" name="password"><br>
+                    <label for="confirmation">Confirmation :</label> <input class="input-group" type="password" name="password"><br>
                     <input type="submit" value="Créer" class="btn btn-primary" id="validCompte">
                 </div>
             </div>
